--- a/src/lib_client_base/tezos-client-base.opam
+++ b/src/lib_client_base/tezos-client-base.opam
@@ -14,9 +14,9 @@ depends: [
   "tezos-storage"
   "tezos-rpc-http"
   "cmdliner"
-  "sapling"
+  "tezos-sapling"
   "alcotest" { with-test }
-  "sapling"
+  "tezos-sapling"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
