--- a/src/lib_protocol_environment/tezos-protocol-environment.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment.opam
@@ -8,14 +8,14 @@ license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
-  "sapling"
+  "tezos-sapling"
   "tezos-base"
   "tezos-protocol-environment-sigs"
   "tezos-protocol-environment-structs"
   "alcotest-lwt" { with-test & >= "1.1.0" }
   "crowbar" { with-test }
   "lwt" { with-test }
-  "sapling"
+  "tezos-sapling"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
