Storage: fix build for irmin 2.3.0
Co-authored-by: Craig Ferguson <me@craigfe.io>

--- a/src/lib_storage/tezos-storage.opam
+++ b/src/lib_storage/tezos-storage.opam
@@ -10,8 +10,9 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-base"
   "tezos-lmdb"
-  "irmin" { >= "2.2.0" }
-  "irmin-pack"
+  "irmin" { >= "2.3.0" }
+  "irmin-pack" { >= "2.3.0" }
+  "irmin-mem" { >= "2.3.0" }
   "digestif" {>= "0.7.3"}
   "tezos-shell-services"
   "tezos-stdlib-unix"
