--- a/.gitlab/ci/doc.yml
+++ b/.gitlab/ci/doc.yml
@@ -9,7 +9,7 @@ documentation:build:
     - tags@tezos/tezos
     - /-release$/@tezos/tezos
   script:
-    - make -C docs html
+    - make -C docs html redirects
   artifacts:
     paths:
       - docs
@@ -21,7 +21,7 @@ documentation:linkcheck:
   before_script:
     - . ./scripts/version.sh
   dependencies:
-    - build
+    - documentation:build
   rules:
     - if: '$CI_COMMIT_TAG && $CI_PROJECT_NAMESPACE == "tezos"'
       when: never
