Renaming: Filters are now called Protocol plugins

--- a/src/bin_node/dune
+++ b/src/bin_node/dune
@@ -68,13 +68,13 @@
             (select void_for_linking-008-PtEdoTez from
               (tezos-embedded-protocol-008-PtEdoTez -> void_for_linking-008-PtEdoTez.empty)
               (-> void_for_linking-008-PtEdoTez.empty))
-            (select void_for_linking-007-PsDELPH1-filters from
-              (tezos-filters-007-PsDELPH1 -> void_for_linking-007-PsDELPH1-filters.empty)
-              (-> void_for_linking-007-PsDELPH1-filters.empty))
-            (select void_for_linking-008-PtEdoTez-filters from
-              (tezos-filters-008-PtEdoTez -> void_for_linking-008-PtEdoTez-filters.empty)
-              (-> void_for_linking-008-PtEdoTez-filters.empty))
-             tezos-filters-alpha
+            (select void_for_linking-007-PsDELPH1-protocol-plugin from
+              (tezos-protocol-plugin-007-PsDELPH1 -> void_for_linking-007-PsDELPH1-protocol-plugin.empty)
+              (-> void_for_linking-007-PsDELPH1-protocol-plugin.empty))
+            (select void_for_linking-008-PtEdoTez-protocol-plugin from
+              (tezos-protocol-plugin-008-PtEdoTez -> void_for_linking-008-PtEdoTez-protocol-plugin.empty)
+              (-> void_for_linking-008-PtEdoTez-protocol-plugin.empty))
+             tezos-protocol-plugin-alpha
              cmdliner
              tls
              lwt-exit)
@@ -111,8 +111,8 @@
    (write-file void_for_linking-006-PsCARTHA.empty "")
    (write-file void_for_linking-007-PsDELPH1.empty "")
    (write-file void_for_linking-008-PtEdoTez.empty "")
-   (write-file void_for_linking-007-PsDELPH1-filters.empty "")
-   (write-file void_for_linking-008-PtEdoTez-filters.empty "")
+   (write-file void_for_linking-007-PsDELPH1-protocol-plugin.empty "")
+   (write-file void_for_linking-008-PtEdoTez-protocol-plugin.empty "")
 )))
 
 (install
