--- a/src/proto_alpha/lib_client_commands/dune
+++ b/src/proto_alpha/lib_client_commands/dune
@@ -12,7 +12,7 @@
             tezos-client-alpha
             tezos-client-commands
             tezos-rpc
-            tezos-filters-alpha)
+            tezos-protocol-plugin-alpha)
  (library_flags (:standard -linkall))
  (modules (:standard \ alpha_commands_registration))
  (flags (:standard -open Tezos_base__TzPervasives
@@ -23,7 +23,7 @@
                    -open Tezos_client_alpha
                    -open Tezos_client_commands
                    -open Tezos_rpc
-                   -open Tezos_filters_alpha)))
+                   -open Tezos_protocol_plugin_alpha)))
 
 (library
  (name tezos_client_alpha_commands_registration)
@@ -38,7 +38,7 @@
             tezos-client-alpha-commands
             tezos-client-sapling-alpha
             tezos-rpc
-            tezos-filters-alpha)
+            tezos-protocol-plugin-alpha)
  (library_flags (:standard -linkall))
  (modules alpha_commands_registration)
  (flags (:standard -open Tezos_base__TzPervasives
@@ -50,7 +50,7 @@
                    -open Tezos_client_alpha_commands
                    -open Tezos_client_sapling_alpha
                    -open Tezos_rpc
-                   -open Tezos_filters_alpha)))
+                   -open Tezos_protocol_plugin_alpha)))
 
 (rule
  (alias runtest_lint)
