--- a/src/proto_007_PsDELPH1/lib_plugin/tezos-protocol-plugin-007-PsDELPH1.opam
+++ b/src/proto_007_PsDELPH1/lib_plugin/tezos-protocol-plugin-007-PsDELPH1.opam
@@ -10,10 +10,9 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-base"
   "tezos-embedded-protocol-007-PsDELPH1"
-  "tezos-shell"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos/Protocol: filters"
+synopsis: "Tezos/Protocol: protocol plugin"
