--- a/src/proto_008_PtEdoTez/lib_plugin/dune
+++ b/src/proto_008_PtEdoTez/lib_plugin/dune
@@ -4,9 +4,21 @@
  (libraries tezos-base
             tezos-embedded-protocol-008-PtEdoTez
             tezos-protocol-008-PtEdoTez)
+ (modules (:standard) \ Registerer)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_embedded_protocol_008_PtEdoTez
                    -open Tezos_protocol_008_PtEdoTez)))
+
+(library
+ (name tezos_protocol_plugin_008_PtEdoTez_registerer)
+ (public_name tezos-protocol-plugin-008-PtEdoTez-registerer)
+ (libraries tezos-base
+            tezos-protocol-plugin-008-PtEdoTez
+            tezos-shell)
+ (modules Registerer)
+ (flags (:standard -open Tezos_base__TzPervasives
+                   -open Tezos_protocol_plugin_008_PtEdoTez
+                   -open Tezos_shell)))
 
 (rule
  (alias runtest_lint)
