--- a/src/proto_008_PtEdoTez/lib_plugin/tezos-protocol-plugin-008-PtEdoTez-registerer.opam
+++ b/src/proto_008_PtEdoTez/lib_plugin/tezos-protocol-plugin-008-PtEdoTez-registerer.opam
@@ -9,10 +9,11 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
   "tezos-base"
-  "tezos-embedded-protocol-008-PtEdoTez"
+  "tezos-protocol-plugin-008-PtEdoTez"
+  "tezos-shell"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos/Protocol: protocol plugin"
+synopsis: "Tezos/Protocol: protocol plugin registerer"
