--- a/src/proto_alpha/lib_plugin/dune
+++ b/src/proto_alpha/lib_plugin/dune
@@ -4,9 +4,21 @@
  (libraries tezos-base
             tezos-embedded-protocol-alpha
             tezos-protocol-alpha)
+ (modules (:standard) \ Registerer)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_embedded_protocol_alpha
                    -open Tezos_protocol_alpha)))
+
+(library
+ (name tezos_protocol_plugin_alpha_registerer)
+ (public_name tezos-protocol-plugin-alpha-registerer)
+ (libraries tezos-base
+            tezos-protocol-plugin-alpha
+            tezos-shell)
+ (modules Registerer)
+ (flags (:standard -open Tezos_base__TzPervasives
+                   -open Tezos_protocol_plugin_alpha
+                   -open Tezos_shell)))
 
 (rule
  (alias runtest_lint)
