--- a/src/proto_alpha/lib_plugin/tezos-protocol-plugin-alpha.opam
+++ b/src/proto_alpha/lib_plugin/tezos-protocol-plugin-alpha.opam
@@ -10,10 +10,9 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-base"
   "tezos-embedded-protocol-alpha"
-  "tezos-shell"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos/Protocol: filters"
+synopsis: "Tezos/Protocol: protocol plugin"
