--- a/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-functor-003-PsddFKi3.opam
+++ b/src/proto_003_PsddFKi3/lib_protocol/tezos-protocol-functor-003-PsddFKi3.opam
@@ -7,6 +7,7 @@ dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
   "dune" { >= "2.0" }
+  "tezos-protocol-003-PsddFKi3"
   "tezos-protocol-compiler"
 ]
 build: [
@@ -15,9 +16,9 @@ build: [
     "%{tezos-protocol-compiler:lib}%/dune_protocol.template"
     "dune"
     "%{tezos-protocol-compiler:lib}%/final_protocol_versions"
-    "007_PsDELPH1"
+    "003_PsddFKi3"
   ]
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos/Protocol: economic-protocol definition"
+synopsis: "Tezos/Protocol: 003_PsddFKi3 (economic-protocol definition parameterized by its environment implementation)"
