--- a/src/proto_007_PsDELPH1/lib_protocol/tezos-protocol-functor-007-PsDELPH1.opam
+++ b/src/proto_007_PsDELPH1/lib_protocol/tezos-protocol-functor-007-PsDELPH1.opam
@@ -7,6 +7,7 @@ dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
   "dune" { >= "2.0" }
+  "tezos-protocol-007-PsDELPH1"
   "tezos-protocol-compiler"
 ]
 build: [
@@ -20,4 +21,4 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
-synopsis: "Tezos/Protocol: economic-protocol definition"
+synopsis: "Tezos/Protocol: economic-protocol definition parameterized by its environment implementation"
