--- a/src/lib_protocol_environment/tezos-protocol-environment.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment.opam
@@ -10,6 +10,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-sapling"
   "tezos-base"
+  "tezos-storage"
   "tezos-protocol-environment-sigs"
   "tezos-protocol-environment-structs"
   "alcotest-lwt" { with-test & >= "1.1.0" }
