p2p/test: extract detached node handling from pool tests
Extract the functions used to manage nodes in Test_p2p_pool into a new
module Node.

--- a/src/lib_p2p/test/dune
+++ b/src/lib_p2p/test/dune
@@ -9,12 +9,14 @@
  (libraries tezos-base
             tezos-stdlib-unix
             tezos-p2p
+            tezos-p2p-services
             alcotest-lwt)
  (flags (:standard -linkall
                    -open Tezos_base__TzPervasives
                    -open Tezos_stdlib_unix
                    -open Tezos_stdlib
-                   -open Tezos_p2p)))
+                   -open Tezos_p2p
+                   -open Tezos_p2p_services)))
 
 (rule
  (alias buildtest)
