--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -1,9 +1,10 @@
-(executable
- (name main)
+(executables
+ (names main saturation_fuzzing)
  (libraries tezos-base
             tezos-micheline
             tezos-protocol-environment
             alcotest-lwt
+            crowbar
             tezos-alpha-test-helpers
             tezos-stdlib-unix
             tezos-client-base
@@ -44,9 +45,14 @@
  (action (run %{exe:main.exe} -v)))
 
 (rule
+ (alias runtest_saturation_fuzzing)
+ (package tezos-protocol-alpha-tests)
+ (action (run %{exe:saturation_fuzzing.exe})))
+
+(rule
  (alias runtest)
  (package tezos-protocol-alpha-tests)
- (deps (alias runtest_proto_alpha))
+ (deps (alias runtest_proto_alpha) (alias runtest_saturation_fuzzing))
  (action (progn)))
 
 (rule
