--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
@@ -10,6 +10,7 @@ depends: [
   "tezos-protocol-compiler"
   "alcotest-lwt" { with-test & >= "1.1.0" }
   "astring" { with-test }
+  "crowbar" { with-test }
   "tezos-alpha-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
