--- a/src/lib_client_base_unix/tezos-client-base-unix.opam
+++ b/src/lib_client_base_unix/tezos-client-base-unix.opam
@@ -17,6 +17,7 @@ depends: [
   "tezos-mockup-registration"
   "tezos-mockup-commands"
   "tezos-proxy"
+  "tezos-test-services" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
