--- a/src/lib_mockup/tezos-mockup.opam
+++ b/src/lib_mockup/tezos-mockup.opam
@@ -17,6 +17,8 @@ depends: [
   "tezos-protocol-environment"
   "tezos-mockup-proxy"
   "tezos-mockup-registration"
+  "tezos-mockup-registration" { with-test }
+  "tezos-test-services" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
