mockup/proxy: Implement RPC_context.json using resto's new local client
Co-Authored-By: Clément Hurlin <clement.hurlin@tweag.io>

--- a/src/lib_mockup/tezos-mockup.opam
+++ b/src/lib_mockup/tezos-mockup.opam
@@ -19,6 +19,7 @@ depends: [
   "tezos-mockup-registration"
   "tezos-mockup-registration" { with-test }
   "tezos-test-services" { with-test }
+  "resto-cohttp-self-serving-client" { >= "0.6" & < "0.7" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
