--- a/src/lib_mockup/dune
+++ b/src/lib_mockup/dune
@@ -17,12 +17,14 @@
    tezos-base
    tezos-client-base
    tezos-mockup-proxy
+   resto-cohttp-self-serving-client
    tezos-rpc
    tezos-p2p-services
    tezos-p2p ; for registering the relevant RPCs
    tezos-protocol-environment
    tezos-stdlib-unix
    tezos-rpc-http
+   tezos-rpc-http-client
    tezos-mockup-registration)
  (flags (:standard
   -open Tezos_base__TzPervasives
