--- a/src/lib_mockup_proxy/tezos-mockup-proxy.opam
+++ b/src/lib_mockup_proxy/tezos-mockup-proxy.opam
@@ -11,7 +11,9 @@ depends: [
   "tezos-client-base"
   "tezos-protocol-environment"
   "tezos-rpc-http"
+  "tezos-rpc-http-client"
   "tezos-shell-services"
+  "resto-cohttp-self-serving-client" { >= "0.6" & < "0.7" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
