--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
@@ -9,6 +9,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-protocol-compiler"
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "astring" { with-test }
   "tezos-alpha-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
