Binaries: Handle --version flag in codec, snoop, validator and clients
Note that clients include tezos-client, but also:
 - tezos-accuser
 - tezos-endorser
 - tezos-baker

--- a/src/lib_protocol_compiler/dune
+++ b/src/lib_protocol_compiler/dune
@@ -23,6 +23,7 @@
  (public_name tezos-protocol-compiler)
  (libraries tezos-base
             tezos-base.unix
+            tezos-version
             tezos-protocol-environment-sigs
             tezos-stdlib-unix
             compiler-libs.common
