Packaging: add missing tezos-version

--- a/src/lib_protocol_compiler/tezos-protocol-compiler.opam
+++ b/src/lib_protocol_compiler/tezos-protocol-compiler.opam
@@ -12,6 +12,7 @@ depends: [
   "dune" { >= "2.0" }
   "base-unix"
   "tezos-base"
+  "tezos-version"
   "tezos-protocol-environment"
   "tezos-protocol-environment-sigs"
   "tezos-stdlib-unix"
