--- a/src/lib_error_monad/tezos-error-monad.opam
+++ b/src/lib_error_monad/tezos-error-monad.opam
@@ -12,7 +12,7 @@ depends: [
   "tezos-stdlib"
   "data-encoding" { >= "0.3" & < "0.4" }
   "lwt"
-  "lwt-canceler" { = "0.2" }
+  "lwt-canceler" { >= "0.3" & < "0.4" }
   "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
