--- a/src/proto_008_PtEdo2Zk/lib_delegate/tezos-baking-008-PtEdo2Zk.opam
+++ b/src/proto_008_PtEdo2Zk/lib_delegate/tezos-baking-008-PtEdo2Zk.opam
@@ -17,7 +17,7 @@ depends: [
   "tezos-client-base"
   "tezos-client-commands"
   "tezos-client-008-PtEdo2Zk"
-  "lwt-canceler" { = "0.2" }
+  "lwt-canceler" { >= "0.3" & < "0.4" }
   "lwt-exit"
 ]
 build: [
