--- a/.gitlab/ci/unittest.yml
+++ b/.gitlab/ci/unittest.yml
@@ -39,43 +39,44 @@ unit:alltest:
     paths:
       - test_results
     expire_in: 1 day
+#    when: on_failure
   script:
-    - scripts/test_wrapper.sh dune src/bin_client client
-    - scripts/test_wrapper.sh dune src/bin_snoop/latex snoop_latex
-    - scripts/test_wrapper.sh dune src/lib_base base
-    - scripts/test_wrapper.sh dune src/lib_benchmark/lib_micheline_rewriting benchmark_lib_micheline_rewriting
-    - scripts/test_wrapper.sh dune src/lib_benchmark benchmark
-    - scripts/test_wrapper.sh dune src/lib_clic clic
-    - scripts/test_wrapper.sh dune src/lib_client_base client_base
-    - scripts/test_wrapper.sh dune src/lib_client_base_unix client_base_unix
-    - scripts/test_wrapper.sh dune src/lib_crypto crypto
-    - scripts/test_wrapper.sh dune src/lib_error_monad error_monad
-    - scripts/test_wrapper.sh dune src/lib_lwt_result_stdlib lwt_result_stdlib
-    - scripts/test_wrapper.sh dune src/lib_micheline micheline
-    - scripts/test_wrapper.sh dune src/lib_mockup mockup
-    - scripts/test_wrapper.sh dune src/lib_p2p p2p
-    - scripts/test_wrapper.sh dune src/lib_protocol_compiler protocol_compiler
-    - scripts/test_wrapper.sh dune src/lib_protocol_environment protocol_environment
-    - scripts/test_wrapper.sh dune src/lib_proxy proxy
-    - scripts/test_wrapper.sh dune src/lib_requester requester
-    - scripts/test_wrapper.sh dune src/lib_sapling sapling
-    - scripts/test_wrapper.sh dune src/lib_shell shell
-    - scripts/test_wrapper.sh dune src/lib_signer_backends signer_backends
-    - scripts/test_wrapper.sh dune src/lib_signer_backends/unix signer_backends_unix
-    - scripts/test_wrapper.sh dune src/lib_stdlib stdlib
-    - scripts/test_wrapper.sh dune src/lib_storage storage
-    - scripts/test_wrapper.sh dune src/proto_006_PsCARTHA/lib_client 006_PsCARTHA_lib_client
-    - scripts/test_wrapper.sh dune src/proto_007_PsDELPH1/lib_client 007_PsDELPH1_lib_client
-    - scripts/test_wrapper.sh dune src/proto_007_PsDELPH1/lib_protocol 007_PsDELPH1_lib_protocol
-    - scripts/test_wrapper.sh dune src/proto_008_PtEdoTez/lib_client 008_PtEdoTez_lib_client
-    - scripts/test_wrapper.sh dune src/proto_008_PtEdoTez/lib_protocol 008_PtEdoTez_lib_protocol
-    - scripts/test_wrapper.sh dune src/proto_alpha/lib_client alpha_lib_client
-    - scripts/test_wrapper.sh dune src/proto_alpha/lib_protocol alpha_lib_protocol
-    - scripts/test_wrapper.sh dune src/tooling src_tooling
-    - scripts/test_wrapper.sh dune vendors/ocaml-bls12-381 ocaml-bls12-381
-    - scripts/test_wrapper.sh dune vendors/ocaml-ledger-wallet ocaml-ledger-wallet
-    - scripts/test_wrapper.sh dune vendors/ocaml-lmdb ocaml-lmdb
-    - scripts/test_wrapper.sh dune vendors/ocaml-uecc ocaml-uecc
+    - scripts/test_wrapper.sh src/bin_client client
+    - scripts/test_wrapper.sh src/bin_snoop/latex snoop_latex
+    - scripts/test_wrapper.sh src/lib_base base
+    - scripts/test_wrapper.sh src/lib_benchmark/lib_micheline_rewriting benchmark_lib_micheline_rewriting
+    - scripts/test_wrapper.sh src/lib_benchmark benchmark
+    - scripts/test_wrapper.sh src/lib_clic clic
+    - scripts/test_wrapper.sh src/lib_client_base client_base
+    - scripts/test_wrapper.sh src/lib_client_base_unix client_base_unix
+    - scripts/test_wrapper.sh src/lib_crypto crypto
+    - scripts/test_wrapper.sh src/lib_error_monad error_monad
+    - scripts/test_wrapper.sh src/lib_lwt_result_stdlib lwt_result_stdlib
+    - scripts/test_wrapper.sh src/lib_micheline micheline
+    - scripts/test_wrapper.sh src/lib_mockup mockup
+    - scripts/test_wrapper.sh src/lib_p2p p2p
+    - scripts/test_wrapper.sh src/lib_protocol_compiler protocol_compiler
+    - scripts/test_wrapper.sh src/lib_protocol_environment protocol_environment
+    - scripts/test_wrapper.sh src/lib_proxy proxy
+    - scripts/test_wrapper.sh src/lib_requester requester
+    - scripts/test_wrapper.sh src/lib_sapling sapling
+    - scripts/test_wrapper.sh src/lib_shell shell
+    - scripts/test_wrapper.sh src/lib_signer_backends signer_backends
+    - scripts/test_wrapper.sh src/lib_signer_backends/unix signer_backends_unix
+    - scripts/test_wrapper.sh src/lib_stdlib stdlib
+    - scripts/test_wrapper.sh src/lib_storage storage
+    - scripts/test_wrapper.sh src/proto_006_PsCARTHA/lib_client 006_PsCARTHA_lib_client
+    - scripts/test_wrapper.sh src/proto_007_PsDELPH1/lib_client 007_PsDELPH1_lib_client
+    - scripts/test_wrapper.sh src/proto_007_PsDELPH1/lib_protocol 007_PsDELPH1_lib_protocol
+    - scripts/test_wrapper.sh src/proto_008_PtEdoTez/lib_client 008_PtEdoTez_lib_client
+    - scripts/test_wrapper.sh src/proto_008_PtEdoTez/lib_protocol 008_PtEdoTez_lib_protocol
+    - scripts/test_wrapper.sh src/proto_alpha/lib_client alpha_lib_client
+    - scripts/test_wrapper.sh src/proto_alpha/lib_protocol alpha_lib_protocol
+    - scripts/test_wrapper.sh src/tooling src_tooling
+    - scripts/test_wrapper.sh vendors/ocaml-bls12-381 ocaml-bls12-381
+    - scripts/test_wrapper.sh vendors/ocaml-ledger-wallet ocaml-ledger-wallet
+    - scripts/test_wrapper.sh vendors/ocaml-lmdb ocaml-lmdb
+    - scripts/test_wrapper.sh vendors/ocaml-uecc ocaml-uecc
 ##END_UNITTEST##
 
 unit:protocol_compiles:
