Env: deduplicate module type definitions
Add an Environment_context_intf module to hold these signatures.

--- a/src/lib_protocol_environment/dune
+++ b/src/lib_protocol_environment/dune
@@ -15,6 +15,7 @@
           Environment_V1
           Environment_V2
           Environment_context
+          Environment_context_intf
           Environment_protocol_T
           Environment_protocol_T_V0
           Environment_protocol_T_V1
