--- a/src/proto_007_PsDELPH1/lib_client/tezos-client-007-PsDELPH1.opam
+++ b/src/proto_007_PsDELPH1/lib_client/tezos-client-007-PsDELPH1.opam
@@ -16,6 +16,7 @@ depends: [
   "tezos-mockup-registration"
   "tezos-signer-backends"
   "tezos-protocol-007-PsDELPH1-parameters"
+  "tezos-protocol-plugin-007-PsDELPH1"
   "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
