--- a/src/proto_007_PsDELPH1/lib_client/dune
+++ b/src/proto_007_PsDELPH1/lib_client/dune
@@ -9,7 +9,8 @@
             tezos-proxy
             tezos-rpc
             tezos-signer-backends
-            tezos-protocol-007-PsDELPH1-parameters)
+            tezos-protocol-007-PsDELPH1-parameters
+            tezos-protocol-plugin-007-PsDELPH1)
  (library_flags (:standard -linkall))
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_shell_services
