--- a/src/proto_008_PtEdoTez/lib_client/tezos-client-008-PtEdoTez.opam
+++ b/src/proto_008_PtEdoTez/lib_client/tezos-client-008-PtEdoTez.opam
@@ -18,6 +18,7 @@ depends: [
   "tezos-proxy"
   "tezos-signer-backends"
   "tezos-protocol-008-PtEdoTez-parameters"
+  "tezos-protocol-plugin-008-PtEdoTez"
   "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
