Binary.maximum_length

--- a/test/dune
+++ b/test/dune
@@ -1,13 +1,14 @@
 (executables
  (names test test_generated test_legacy_compatibility test_json_stream
-   test_json_stream_sizes bench_data_encoding)
+   test_json_stream_sizes test_classifiers bench_data_encoding)
  (libraries data_encoding zarith alcotest crowbar)
  (flags :standard))
 
 (alias
  (name buildtest)
  (deps test.exe test_generated.exe test_legacy_compatibility.exe
-   test_json_stream.exe test_json_stream_sizes.exe bench_data_encoding.exe))
+   test_json_stream.exe test_json_stream_sizes.exe test_classifiers.exe
+   bench_data_encoding.exe))
 
 (alias
  (name runtest_test)
@@ -35,13 +36,19 @@
   (run %{exe:test_legacy_compatibility.exe})))
 
 (alias
+ (name runtest_test_classifiers)
+ (action
+  (run %{exe:test_classifiers.exe})))
+
+(alias
  (name runtest)
  (deps
   (alias runtest_test)
   (alias runtest_test_legacy_compatibility)
   (alias runtest_test_generated)
   (alias runtest_test_json_stream)
-  (alias runtest_test_json_stream_sizes)))
+  (alias runtest_test_json_stream_sizes)
+  (alias runtest_test_classifiers)))
 
 (alias
  (name run_bench)
