--- a/src/lib_proxy/tezos-proxy.opam
+++ b/src/lib_proxy/tezos-proxy.opam
@@ -14,6 +14,7 @@ depends: [
   "tezos-rpc"
   "tezos-shell-services"
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "crowbar" { with-test }
   "tezos-test-services" { with-test }
 ]
 build: [
