--- a/src/lib_proxy/dune
+++ b/src/lib_proxy/dune
@@ -2,16 +2,18 @@
  (name tezos_proxy)
  (public_name tezos-proxy)
  (libraries
-   tezos-base
-   tezos-client-base
-   tezos-mockup-proxy
-   tezos-protocol-environment
-   tezos-rpc
-   tezos-shell-services)
- (flags (:standard
-  -open Tezos_base__TzPervasives)))
+  tezos-base
+  tezos-client-base
+  tezos-mockup-proxy
+  tezos-protocol-environment
+  tezos-rpc
+  tezos-shell-services)
+ (flags
+  (:standard -open Tezos_base__TzPervasives)))
 
 (rule
  (alias runtest_lint)
- (deps (glob_files *.ml{,i}))
- (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
+ (deps
+  (glob_files *.ml{,i}))
+ (action
+  (run %{lib:tezos-tooling:lint.sh} %{deps})))
