--- a/src/lib_base/tezos-base.opam
+++ b/src/lib_base/tezos-base.opam
@@ -10,7 +10,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-stdlib"
   "tezos-crypto"
-  "data-encoding" { = "0.2" }
+  "data-encoding" { >= "0.3" & < "0.4" }
   "tezos-error-monad"
   "tezos-lwt-result-stdlib"
   "tezos-event-logging"
