--- a/src/lib_error_monad/tezos-error-monad.opam
+++ b/src/lib_error_monad/tezos-error-monad.opam
@@ -10,7 +10,7 @@ depends: [
   "dune" { >= "2.0" }
   "ocaml" { >= "4.07" }
   "tezos-stdlib"
-  "data-encoding" { = "0.2" }
+  "data-encoding" { >= "0.3" & < "0.4" }
   "lwt"
   "lwt-canceler" { = "0.2" }
   "alcotest-lwt" { with-test & >= "1.1.0" }
