--- a/src/lib_event_logging/tezos-event-logging.opam
+++ b/src/lib_event_logging/tezos-event-logging.opam
@@ -11,7 +11,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-stdlib"
   "tezos-lwt-result-stdlib"
-  "data-encoding" { = "0.2" }
+  "data-encoding" { >= "0.3" & < "0.4" }
   "tezos-error-monad"
   "lwt_log"
 ]
