--- a/src/lib_sapling/tezos-sapling.opam
+++ b/src/lib_sapling/tezos-sapling.opam
@@ -13,7 +13,7 @@ depends: [
   "hex"
   "ctypes"
   "ctypes-foreign"
-  "data-encoding"
+  "data-encoding" { >= "0.3" & < "0.4" }
   "tezos-crypto"
   "tezos-stdlib"
   "tezos-error-monad"
