--- a/src/lib_stdlib_unix/tezos-stdlib-unix.opam
+++ b/src/lib_stdlib_unix/tezos-stdlib-unix.opam
@@ -9,7 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   "base-unix"
   "dune" { >= "2.0" }
-  "data-encoding" { = "0.2" }
+  "data-encoding" { >= "0.3" & < "0.4" }
   "tezos-error-monad"
   "tezos-lwt-result-stdlib"
   "tezos-event-logging"
