--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,16 @@
----
+include: 'https://gitlab.com/nomadic-labs/gitlab-ocaml-ci-example/-/raw/main/.gitlab-ci.yml'
 
-.build_template:
-  image: ocaml/opam2:alpine-3.10-ocaml-4.08
-  before_script:
-    - sudo apk add --update gmp-dev m4 perl
-    - opam repository set-url default https://opam.ocaml.org
-    - opam update
-    - opam pin --no-action data-encoding .
-    - opam depext data-encoding
-    - opam install --deps-only data-encoding
-  cache:
-    key: "$CI_COMMIT_REF_SLUG"
-    paths:
-      - _build
+.build-matrix:
+  parallel:
+    matrix:
+    - OCAML_COMPILER: "4.08.1"
+    - OCAML_COMPILER: "4.09.1"
+    - OCAML_COMPILER: "4.10.0"
+    - OCAML_COMPILER: "4.11.1"
 
-build:
-  extends: .build_template
-  stage: build
-  script:
-    - dune build
-
-test:
-  extends: .build_template
-  stage: test
-  script:
-    - opam depext ocamlformat.0.15.0
-    - opam install ocamlformat.0.15.0
-    - dune build @fmt
-    - opam depext --dry-run crowbar alcotest
-    - opam install --deps-only --with-test .
-    - dune runtest
-
-pages:
-  extends: .build_template
-  stage: deploy
-  artifacts:
-    paths:
-      - public/
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
-  script:
-    - opam install odoc
-    - dune build @doc
-    - mv _build/default/_doc/_html public/
+variables:
+  CLEAN_OPAM_CACHE: "false"
+  CLEAN_DUNE_CACHE: "false"
+  DUNE_BUILD_TARGETS: "@src/all"
+  DUNE_TEST_TARGETS: "@fmt @runtest"
+  DUNE_DOC_TARGETS: "@doc"
