--- a/data-encoding.opam
+++ b/data-encoding.opam
@@ -14,6 +14,7 @@ depends: [
   "json-data-encoding-bson" { = "0.9.1" }
   "alcotest" { with-test }
   "crowbar" { >= "0.2" & with-test }
+  "ocamlformat" { = "0.15.0" & dev }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
